--- a/src/styles.scss
+++ b/src/styles.scss
@@ -234,8 +234,7 @@ hr {
 .formulario {
     display: flex;
     flex-direction: column;
-    margin-left: 50px;
-    margin-bottom: 50px;
+    margin: 50px 0 50px 50px;
     width: 100%;
     max-width: 250px;
 
