--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,7 +70,7 @@ body {
     color: $text;
     font-size: 14px;
     font-family: 'Roboto', sans-serif;
-    background: $primary;
+    padding-left: 58px;
 }
 
 h2 {
@@ -120,6 +120,22 @@ b {
 hr {
     background: $lightprimary;
     margin: 15px 0 40px;
+}
+
+// Mobile First
+
+@media only screen and (min-width: $tablet) {
+    
+    body {
+        padding-left: 275px;
+    }
+}
+
+@media only screen and (min-width: $laptop) {
+    
+    body {
+        padding-left: 350px;
+    }
 }
 
 // ────────────────── //
